apps/radarr/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: radarr-ingress
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`radarr.sobrinho.pt`)
      kind: Rule
      services:
        - name: radarr
          port: main
